--- a/i3/config
+++ b/i3/config
@@ -14,6 +14,7 @@ set $mod Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
+#font pango:terminus 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -49,13 +50,14 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal (i.e st)
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+p exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -189,10 +191,10 @@ bar {
         status_command i3status -c ~/.config/i3/i3status.conf
 }
 
-#gaps inner 7
-#gaps outer 2
+gaps inner 7
+gaps outer 2
 
-#smart_borders on
+smart_borders on
 
 for_window [class="^.*"] border pixel 2
 
