--- a/i3/config
+++ b/i3/config
@@ -200,4 +200,4 @@ for_window [class="^.*"] border pixel 2
 
 exec_always feh --bg-scale /home/j/Pictures/wallpaper.jpg
 exec_always --no-startup-id picom --config /home/j/.config/i3/picom.conf
-exec --no-startup-id ~/main.sh
+exec_always xinput set-prop 10 "libinput Accel Profile Enabled" 0 1 0
